# rbl_controller

./: .clang-format  .gitignore  README.md  config_exp.rviz  move_csv.sh  plot_data_fromjs.py  plot_hector_map.py  plot_hector_map1.py  start.sh  tags  uav_data.npz  uav_data.npz_old
ros_packages/rbl_controller/: CMakeLists.txt  nodelet_plugins.xml  package.xml
ros_packages/rbl_controller/config/: default.yaml
ros_packages/rbl_controller/include/: fm2.h  process_pointcloud.h  rbl_controller.h
ros_packages/rbl_controller/launch/: controller.launch  tf_publisher.launch
ros_packages/rbl_controller/scripts/: particle_filter.py
ros_packages/rbl_controller/src/: clear.cpp  fm2.cpp  nodelet.cpp  rbl_controller.cpp  start.sh  utils.cpp
ros_packages/rbl_controller/srv/: ActivateParams.srv
rosbags/12_2024_04_21_10_58_39_circle_seven_uavs_first_trial/: uav1.csv  uav3.csv  uav31.csv  uav32.csv  uav37.csv  uav8.csv
scripts/: motion_metric.py  order_metric.py
tmux/Deployment/test_on_drone/: record.sh
tmux/Experiment_April/: frames.gv  tmux.sh
tmux/Experiment_April/config/: rbl_controller.yaml
tmux/Experiments/exp_1/: record.sh
tmux/Experiments/exp_5_uvdar/: tmux.sh
tmux/Experiments/mrs_5_uvdar/: rviz.rviz
tmux/Experiments_October/exp_1/: record.sh
tmux/Experiments_October/exp_3_uvdar/: record.sh
tmux/OLD/mrs_1/: session.yml
tmux/OLD/mrs_10/: rviz.rviz
tmux/OLD/mrs_10_drones_circle/: rviz.rviz  rviz0.rviz
tmux/OLD/mrs_3_uvdar/: rviz.rviz  session.yml
tmux/OLD/mrs_3_uvdar_/: rviz.rviz  session.yml
tmux/OLD/mrs_5_circle_uvdar/: rviz.rviz
tmux/OLD/mrs_5_drones/: rviz.rviz
tmux/OLD/mrs_5_uvdar_circle_/: session.yml
tmux/OLD/mrs_9_comparison_/: rviz.rviz  session.yml
tmux/OLD/mrs_9_uvdar_circle/: session.yml
tmux/OLD/simulation/: rviz.rviz
tmux/OLD/simulation_/: session.yml
tmux/Simulation_1_uav_octomap/: session.yml
tmux/Simulation_1_uav_octomap/config/: octomap_planner.yaml  rbl_controller.yaml  world_config.yaml
tmux/Simulation_2_uav_octomap/: session.yml
tmux/Simulation_2_uav_octomap/config/: network_config.yaml  rbl_controller.yaml
tmux/Simulation_3_uav_octomap/: frames.gv  plotjuggler.xml  rviz.rviz  rviz_config.rviz  session.yml
tmux/Simulation_3_uav_octomap/config/: rbl_controller.yaml  tf_connector.yaml
tmux/Simulation_4_uav_octomap/: plotjuggler.xml  record.sh  rviz_config.rviz  session.yml
tmux/Simulation_4_uav_octomap/config/: custom_config.yaml  minimal_planner.yaml  octomap_planner.yaml  rbl_controller.yaml  tf_connector.yaml
tmux/exp_1/: .tmux.sh.swp  tmux.sh
tmux/exp_1/config/: custom_config.yaml  network_config.yaml  rbl_controller.yaml  tf_connector.yaml  world_temesvar_forest.yaml
tmux/exp_2_uvdar/config/: rbl_controller.yaml  tf_connector.yaml
tmux/exp_3_uvdar/: tmux.sh
tmux/exp_3_uvdar/config/: custom_config.yaml  network_config.yaml  rbl_controller.yaml  tf_connector.yaml
tmux/exp_4_uvdar/: record.sh  tmux.sh
tmux/exp_4_uvdar/config/: custom_config.yaml  rbl_controller.yaml  world_temesvar_forest.yaml
tmux/exp_5_uvdar/config/: network_config.yaml  rbl_controller.yaml  tf_connector.yaml
tmux/exp_five_drones/config/: rbl_controller.yaml  tf_connector.yaml
tmux/exp_seven_drones/: tmux.sh
tmux/exp_seven_drones/config/: network_config.yaml  rbl_controller.yaml  tf_connector.yaml
tmux/exp_seven_drones_circle/: tmux.sh
tmux/exp_seven_drones_circle/config/: network_config.yaml  rbl_controller.yaml
tmux/exp_six_drones/: tmux.sh
tmux/exp_six_drones/config/: .rbl_controller.yaml.swp  communication_config.yaml  network_config.yaml  rbl_controller.yaml  tf_connector.yaml
tmux/mrs_1/config/: simulator.yaml  tf_connector.yaml
tmux/mrs_10/: session.yml
tmux/mrs_10/config/: custom_config.yaml  rbl_controller.yaml  simulator.yaml  tf_connector.yaml
tmux/mrs_10_drones_circle/: session.yml
tmux/mrs_10_drones_circle/config/: network_config.yaml  rbl_controller.yaml  simulator.yaml  tf_connector.yaml
tmux/mrs_16/: rviz.rviz  session.yml
tmux/mrs_25todo/: rviz.rviz
tmux/mrs_3_comparison/: session.yml
tmux/mrs_3_drones/: session.yml
tmux/mrs_3_uvdar/: rviz.rviz  session.yml
tmux/mrs_4_uvdar/: rviz.rviz  session.yml
tmux/mrs_5_circle_uvdar/: .s.swp  session.yml
tmux/mrs_5_drones/: rviz_realdata_rbl5robots.rviz  session.yml
tmux/mrs_5_uvdar/: rviz.rviz  session.yml
tmux/mrs_5_uvdar_circle/: rviz.rviz  session.yml
tmux/mrs_7_drones_circle/: session.yml
tmux/mrs_7_drones_circle_no/: rviz.rviz  session.yml
tmux/mrs_9/: session.yml
tmux/mrs_9_circle/: rviz.rviz  session.yml
tmux/mrs_9_comparison/: rviz.rviz  session.yml
tmux/mrs_9_uvdar/: record.sh  rviz.rviz  session.yml
tmux/mrs_9_uvdar_circle/: rviz.rviz  session.yml
tmux/mrs_ten_drones_nmpc/: run_antipodal_circle_test.py  rviz.rviz  session.yml
tmux/sim_1_uav/: plotjuggler.xml  rviz_config.rviz  session.yml
tmux/sim_2_uav/: rviz.rviz  rviz_config.rviz  session.yml
tmux/simulation/: session.yml
tmux/simulation_/: session.yml
tmux/simulation_rosbga/: rviz.rviz  session.yml
tmux/test_/: rviz.rviz  session.yml
tmux/test_2_uav/: plotjuggler.xml  rviz_config.rviz  session.yml
tmux/test_on_drone/: .tmux.sh.swo  .tmux.sh.swp  frames.gv  replay.sh  tmux.sh
(+140 files in other folders)
